--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-Flask==2.3.2
-psycopg2-binary==2.9.7
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-itsdangerous==2.1.2
-click==8.1.3
-gunicorn==20.1.0
+Flask
+Flask-SQLAlchemy
+Flask-Migrate
+psycopg2
